# Assessment

complex_task/: .gitignore  detect.py  main.py  main_simple_version.py  main_v2.py  requirements.txt
cpp/: main.cpp  matrix.hpp
linux/: TaskOfLinux.md  creat_snapshot.sh
opencv/: main.py
ros2/src/my_interfaces/: CMakeLists.txt  package.xml
ros2/src/my_interfaces/msg/: MyMat.msg
ros2/src/task/: CMakeLists.txt  package.xml
ros2/src/task/src/: camera_node.cpp  find_red_node.cpp  serial_node.cpp
